# mini-search

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  Shuttle.toml
apps/api/: Cargo.toml  Shuttle.toml
apps/api/src/: create_routes.rs  main.rs
apps/api/src/routes/: health_check.rs  mod.rs  pages_per_site.rs  scraped_urls.rs  search.rs  trigger_indexing.rs
apps/search-ui/: .firebaserc  .gitignore  index.html  package-lock.json  package.json
apps/search-ui/src/: App.css  App.tsx
apps/search-ui/src/api/: fetchAnalytics.ts  fetchCrawledSites.ts  fetchSearchResults.ts
apps/search-ui/src/pages/: Analytics.tsx  CrawledSitesList.tsx  Search.tsx
apps/search-ui/src/types/: AnalyticsEntry.ts  Search.ts
crates/config/src/: lib.rs
crates/crawler/: Cargo.toml
crates/crawler/examples/: create_index.rs  delete_term.rs
crates/crawler/src/: doc_collector.rs  doc_extractor.rs  extracted_content.rs  lib.rs  main.rs
crates/searcher/: Cargo.toml
crates/searcher/examples/: get_pages_per_site.rs
crates/searcher/src/: lib.rs
