[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9" }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.28", features = ["full"] }
tower = "0.4"
hyper = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
crawler = { path = "../../crates/crawler" }
searcher = { path = "../../crates/searcher" }
shuttle-runtime = "0.49.0"
shuttle-axum = "0.49.0"
