[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
voyager = "0.2"
spider = "2.22.8"
tantivy = "0.19"
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
scraper = "0.17"
url = "2.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.0"
futures = "0.3.31"
config = { path = "../config" }